# Simulation

./: .gitignore  ACCOUNTING_IDENTITIES.md  ARCHITECTURE.md  DECISIONS.md  HANDOFF.md  KNOWN_LIMITATIONS.md  METRIC_DEFINITIONS.md  PROJECT_STATUS.md  README.md  RULE_SOURCES.md  UI_GUIDE.md  V2_METRICS.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
configs/: nq_es_micro_contracts.yaml  v1_example.json
docs/: FORWARD_LEDGER_IMPLEMENTATION_PLAN.md  REALIZED_MASTER_PATH_METHOD.md  STREAMLIT_DEPLOY.md  prop_lifecycle_audit_handoff.md
handoff_artifacts/: 094fe61..3387d3a.patch  README.md  codex-v1-core-review004.bundle  review013_014.patch  v2_1_live_account.patch  v3_margin_exposure.patch  v4_prop_firm.patch  v5_optimize.patch  v6_ui.patch
sample_data/: es_strategy.csv  nq_es_margin_sim_master_2025_2026.csv  nq_strategy.csv
scripts/: verify_multi_firm_delivery.py
sim_core/: __init__.py  batch.py  exports.py  forward_master_path.py  instruments.py  lifecycle.py  live_account.py  models.py  portfolio.py  prop_rules.py
tests/: test_acceptance_v1.py  test_apex_eod_rules.py  test_app_logic.py  test_block_gaps.py  test_blocker_regressions.py  test_breakeven_policy.py  test_canonical_fixture.py  test_contract_mapping.py  test_coverage_report.py  test_forward_master_path.py  test_ingestion.py  test_lifecycle.py  test_live_account.py  test_multi_firm_conformance.py  test_portfolio.py  test_prop_rules.py  test_provenance.py  test_real_ledger_integration.py  test_replay_and_metrics.py  test_resampling.py  test_rule_certification_ui.py  test_rule_contracts.py  (+3 more)
(+134 files in other folders)
